<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    app:layoutDescription="@xml/activity_onboarding_scene"
    tools:context=".ui.onboarding.OnboardingActivity">

    <ImageView
        android:id="@+id/imgDiscover"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/onboarding_title_1"
        android:src="@drawable/onboarding_discover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDiscoverTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/onboarding_title_1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgDiscover"
        app:layout_constraintStart_toStartOf="@+id/imgDiscover"
        app:layout_constraintTop_toBottomOf="@+id/imgDiscover" />

    <TextView
        android:id="@+id/txtDiscoverDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_desc_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imgDiscover"
        app:layout_constraintStart_toStartOf="@+id/imgDiscover"
        app:layout_constraintTop_toBottomOf="@+id/txtDiscoverTitle" />

    <ImageView
        android:id="@+id/imgScan"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/onboarding_title_2"
        android:src="@drawable/onboarding_scan"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDiscoverTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/onboarding_title_2"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgScan"
        app:layout_constraintStart_toStartOf="@+id/imgScan"
        app:layout_constraintTop_toBottomOf="@+id/imgScan" />

    <TextView
        android:id="@+id/txtDiscoverDesc2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_desc_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imgScan"
        app:layout_constraintStart_toStartOf="@+id/imgScan"
        app:layout_constraintTop_toBottomOf="@+id/txtDiscoverTitle2" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:tint="@color/secondary_dark"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_circle_24" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:tint="@color/secondary_dark"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_circle_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/start"
        android:textSize="18sp"
        android:visibility="visible"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/menu1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>